<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <android.support.v7.widget.Toolbar
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/test_your_luck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:textSize="40sp" android:textStyle="bold" android:textColor="@color/colorPrimary"
            android:typeface="monospace" android:fontFamily="sans-serif-condensed"/>
    <EditText
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editText5" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="14sp"
            android:hint="@string/input_your_lucky_number_here"
            android:drawableStart="@drawable/ic_tap_and_play_black_24dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintHorizontal_bias="0.504"
            android:importantForAutofill="no" tools:targetApi="o" android:singleLine="true" android:inputType="number"/>
    <TextView
            android:text="@string/your_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/editText5"
            app:layout_constraintEnd_toStartOf="@+id/textView6" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.361" android:textColor="@color/colorDark"/>
    <TextView
            android:text="@string/_100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textAlignment="center" app:layout_constraintEnd_toStartOf="@+id/editText6"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.374"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    <TextView
            android:text="@string/bet_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/editText6"
            android:id="@+id/textView6" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="64dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/editText5"
            android:textColor="@color/colorDark"/>
    <EditText
            android:layout_width="77dp"
            android:layout_height="41dp"
            android:ems="10"
            android:id="@+id/editText6"
            android:textSize="14sp" android:layout_marginEnd="64dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:layout_marginTop="4dp" android:importantForAutofill="no" tools:targetApi="o"
            android:inputType="number"/>
    <Button
            android:text="@string/play"
            android:layout_width="253dp"
            android:layout_height="39dp"
            android:id="@+id/button"
            android:background="@drawable/button_play_boder_state" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText6"/>
    <TextView
            android:text="@string/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/button" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.501" android:textSize="16sp"
            android:textStyle="bold" android:textColor="@color/colorPrimary"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:id="@+id/linearLayout">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="368dp"
                tools:layout_editor_absoluteX="191dp" android:id="@+id/textView10"
                android:textAlignment="center"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="368dp"
                tools:layout_editor_absoluteX="133dp" android:id="@+id/textView9"
                android:textAlignment="center"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="368dp"
                tools:layout_editor_absoluteX="75dp" android:id="@+id/textView8"
                android:textAlignment="center"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="368dp"
                tools:layout_editor_absoluteX="249dp" android:id="@+id/textView11"
                android:textAlignment="center"/>
    </LinearLayout>
    <TextView
            android:text="@string/congratulations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="48dp" android:textColor="@color/colorBlue"/>
    <TextView
            android:text="@string/_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView12" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textColor="@color/colorBlue"/>
</android.support.constraint.ConstraintLayout>